src/main/java/com/mnorfolk/jzz/gen/JzzParser.java
// Generated from C:/Users/KidsComputer/Documents/Intellij Projects/LanguageV2/src/main/resources\Jzz.g4 by ANTLR 4.7.2

package com.mnorfolk.jzz.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JzzParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ACCESS=1, COLON=2, ASSIGN=3, END_LINE=4, ARGUMENT_SEP=5, TRUE=6, FALSE=7, 
		ID=8, INT=9, HEX_INT=10, BINARY_INT=11, FLOAT=12, STRING=13, COMMENT=14, 
		BLOCK_COMMENT=15, WHITESPACE=16, OPEN_BRACE=17, CLOSE_BRACE=18, OPEN_PAREN=19, 
		CLOSE_PAREN=20, OPEN_BRACKET=21, CLOSE_BRACKET=22, BAR=23, INCREMENT=24, 
		DECREMENT=25, PLUS=26, MINUS=27, MULTI=28, DIV=29, FLOOR_DIV=30, MOD=31, 
		DIV_MOD=32, POW=33, LT=34, GT=35, LTEQ=36, GTEQ=37, EQ=38, NEQ=39, INT_COMPARE=40, 
		NOT=41, OR=42, AND=43, XOR=44, SHIFT_L=45, SHIFT_R=46, AMPERSAND=47;
	public static final int
		RULE_parseFile = 0, RULE_lambda = 1, RULE_lambdaParams = 2, RULE_codeLine = 3, 
		RULE_declareVar = 4, RULE_assignVar = 5, RULE_assignCallable = 6, RULE_declareAndAssign = 7, 
		RULE_parenParams = 8, RULE_bracketParams = 9, RULE_subExpr = 10, RULE_expression = 11, 
		RULE_object = 12, RULE_attribute = 13, RULE_safeAttribute = 14, RULE_arguments = 15, 
		RULE_array = 16, RULE_literal = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"parseFile", "lambda", "lambdaParams", "codeLine", "declareVar", "assignVar", 
			"assignCallable", "declareAndAssign", "parenParams", "bracketParams", 
			"subExpr", "expression", "object", "attribute", "safeAttribute", "arguments", 
			"array", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "':'", "'='", "';'", "','", "'TRUE'", "'FALSE'", null, null, 
			null, null, null, null, null, null, null, "'{'", "'}'", "'('", "')'", 
			"'['", "']'", "'|'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'//'", 
			"'%'", "'/%'", "'^'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'<=>'", 
			null, "'||'", "'&&'", null, "'<<'", "'>>'", "'&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ACCESS", "COLON", "ASSIGN", "END_LINE", "ARGUMENT_SEP", "TRUE", 
			"FALSE", "ID", "INT", "HEX_INT", "BINARY_INT", "FLOAT", "STRING", "COMMENT", 
			"BLOCK_COMMENT", "WHITESPACE", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PAREN", 
			"CLOSE_PAREN", "OPEN_BRACKET", "CLOSE_BRACKET", "BAR", "INCREMENT", "DECREMENT", 
			"PLUS", "MINUS", "MULTI", "DIV", "FLOOR_DIV", "MOD", "DIV_MOD", "POW", 
			"LT", "GT", "LTEQ", "GTEQ", "EQ", "NEQ", "INT_COMPARE", "NOT", "OR", 
			"AND", "XOR", "SHIFT_L", "SHIFT_R", "AMPERSAND"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jzz.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JzzParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseFileContext extends ParserRuleContext {
		public LambdaContext lambda() {
			return getRuleContext(LambdaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JzzParser.EOF, 0); }
		public ParseFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterParseFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitParseFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitParseFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseFileContext parseFile() throws RecognitionException {
		ParseFileContext _localctx = new ParseFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			lambda();
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaContext extends ParserRuleContext {
		public LambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda; }
	 
		public LambdaContext() { }
		public void copyFrom(LambdaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultiLambdaContext extends LambdaContext {
		public TerminalNode OPEN_BRACE() { return getToken(JzzParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(JzzParser.CLOSE_BRACE, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(JzzParser.OPEN_PAREN, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(JzzParser.CLOSE_PAREN, 0); }
		public List<CodeLineContext> codeLine() {
			return getRuleContexts(CodeLineContext.class);
		}
		public CodeLineContext codeLine(int i) {
			return getRuleContext(CodeLineContext.class,i);
		}
		public LambdaParamsContext lambdaParams() {
			return getRuleContext(LambdaParamsContext.class,0);
		}
		public MultiLambdaContext(LambdaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterMultiLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitMultiLambda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitMultiLambda(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleLambdaContext extends LambdaContext {
		public TerminalNode OPEN_BRACKET() { return getToken(JzzParser.OPEN_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(JzzParser.CLOSE_BRACKET, 0); }
		public TerminalNode OPEN_PAREN() { return getToken(JzzParser.OPEN_PAREN, 0); }
		public TerminalNode CLOSE_PAREN() { return getToken(JzzParser.CLOSE_PAREN, 0); }
		public LambdaParamsContext lambdaParams() {
			return getRuleContext(LambdaParamsContext.class,0);
		}
		public SingleLambdaContext(LambdaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterSingleLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitSingleLambda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitSingleLambda(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaContext lambda() throws RecognitionException {
		LambdaContext _localctx = new LambdaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lambda);
		int _la;
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new MultiLambdaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPEN_PAREN) {
					{
					setState(39);
					match(OPEN_PAREN);
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(40);
						lambdaParams();
						}
					}

					setState(43);
					match(CLOSE_PAREN);
					}
				}

				setState(46);
				match(OPEN_BRACE);
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << INT) | (1L << HEX_INT) | (1L << BINARY_INT) | (1L << FLOAT) | (1L << STRING) | (1L << OPEN_BRACE) | (1L << OPEN_PAREN) | (1L << OPEN_BRACKET) | (1L << BAR) | (1L << INCREMENT) | (1L << DECREMENT) | (1L << MINUS) | (1L << MULTI) | (1L << NOT) | (1L << AMPERSAND))) != 0)) {
					{
					{
					setState(47);
					codeLine();
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(53);
				match(CLOSE_BRACE);
				}
				break;
			case 2:
				_localctx = new SingleLambdaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPEN_PAREN) {
					{
					setState(54);
					match(OPEN_PAREN);
					setState(56);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(55);
						lambdaParams();
						}
					}

					setState(58);
					match(CLOSE_PAREN);
					}
				}

				setState(61);
				match(OPEN_BRACKET);
				setState(62);
				expression(0);
				setState(63);
				match(CLOSE_BRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaParamsContext extends ParserRuleContext {
		public List<DeclareAndAssignContext> declareAndAssign() {
			return getRuleContexts(DeclareAndAssignContext.class);
		}
		public DeclareAndAssignContext declareAndAssign(int i) {
			return getRuleContext(DeclareAndAssignContext.class,i);
		}
		public List<DeclareVarContext> declareVar() {
			return getRuleContexts(DeclareVarContext.class);
		}
		public DeclareVarContext declareVar(int i) {
			return getRuleContext(DeclareVarContext.class,i);
		}
		public List<TerminalNode> ARGUMENT_SEP() { return getTokens(JzzParser.ARGUMENT_SEP); }
		public TerminalNode ARGUMENT_SEP(int i) {
			return getToken(JzzParser.ARGUMENT_SEP, i);
		}
		public LambdaParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambdaParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterLambdaParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitLambdaParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitLambdaParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaParamsContext lambdaParams() throws RecognitionException {
		LambdaParamsContext _localctx = new LambdaParamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lambdaParams);
		int _la;
		try {
			int _alt;
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(67);
						declareVar();
						setState(68);
						match(ARGUMENT_SEP);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(72); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(74);
						declareAndAssign();
						setState(75);
						match(ARGUMENT_SEP);
						}
						} 
					}
					setState(81);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(82);
				declareAndAssign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				declareVar();
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ARGUMENT_SEP) {
					{
					{
					setState(85);
					match(ARGUMENT_SEP);
					setState(86);
					declareVar();
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				declareAndAssign();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ARGUMENT_SEP) {
					{
					{
					setState(93);
					match(ARGUMENT_SEP);
					setState(94);
					declareAndAssign();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeLineContext extends ParserRuleContext {
		public CodeLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeLine; }
	 
		public CodeLineContext() { }
		public void copyFrom(CodeLineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprLineContext extends CodeLineContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode END_LINE() { return getToken(JzzParser.END_LINE, 0); }
		public ExprLineContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterExprLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitExprLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitExprLine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareLineContext extends CodeLineContext {
		public DeclareVarContext declareVar() {
			return getRuleContext(DeclareVarContext.class,0);
		}
		public TerminalNode END_LINE() { return getToken(JzzParser.END_LINE, 0); }
		public DeclareLineContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterDeclareLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitDeclareLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitDeclareLine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignCallableLineContext extends CodeLineContext {
		public AssignCallableContext assignCallable() {
			return getRuleContext(AssignCallableContext.class,0);
		}
		public TerminalNode END_LINE() { return getToken(JzzParser.END_LINE, 0); }
		public AssignCallableLineContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterAssignCallableLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitAssignCallableLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitAssignCallableLine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclareAndAssignLineContext extends CodeLineContext {
		public DeclareAndAssignContext declareAndAssign() {
			return getRuleContext(DeclareAndAssignContext.class,0);
		}
		public TerminalNode END_LINE() { return getToken(JzzParser.END_LINE, 0); }
		public DeclareAndAssignLineContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterDeclareAndAssignLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitDeclareAndAssignLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitDeclareAndAssignLine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignLineContext extends CodeLineContext {
		public AssignVarContext assignVar() {
			return getRuleContext(AssignVarContext.class,0);
		}
		public TerminalNode END_LINE() { return getToken(JzzParser.END_LINE, 0); }
		public AssignLineContext(CodeLineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterAssignLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitAssignLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitAssignLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeLineContext codeLine() throws RecognitionException {
		CodeLineContext _localctx = new CodeLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_codeLine);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new DeclareAndAssignLineContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				declareAndAssign();
				setState(103);
				match(END_LINE);
				}
				break;
			case 2:
				_localctx = new DeclareLineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				declareVar();
				setState(106);
				match(END_LINE);
				}
				break;
			case 3:
				_localctx = new AssignLineContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				assignVar();
				setState(109);
				match(END_LINE);
				}
				break;
			case 4:
				_localctx = new AssignCallableLineContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				assignCallable();
				setState(112);
				match(END_LINE);
				}
				break;
			case 5:
				_localctx = new ExprLineContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				expression(0);
				setState(115);
				match(END_LINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareVarContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(JzzParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JzzParser.ID, i);
		}
		public DeclareVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterDeclareVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitDeclareVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitDeclareVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareVarContext declareVar() throws RecognitionException {
		DeclareVarContext _localctx = new DeclareVarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declareVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(120);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignVarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JzzParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(JzzParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).enterAssignVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JzzListener ) ((JzzListener)listener).exitAssignVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JzzVisitor ) return ((JzzVisitor<? extends T>)visitor).visitAssignVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignVarContext assignVar() throws RecognitionException {
		AssignVarContext _localctx = new AssignVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(ID);
			setState(123);
			match(ASSIGN);
			setState(124);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
